--- a/projects/02_surveydown/index.qmd
+++ b/projects/02_surveydown/index.qmd
@@ -1,11 +1,12 @@
 ---
-title: "The surveydown R package"
-subtitle: "A flexible, open-source platform for making surveys with R, Quarto, Shiny, and Supabase."
+title: "The surveydown {{< var rnolink >}} Package 🎉"
+subtitle: "A flexible, open-source platform for making surveys"
 author:
   - "John Paul Helveston, Ph.D."
   - "Pingfan Hu"
 date: "Jun 01, 2024"
-categories: [Survey, Software]
+date-modified: "Jan 28, 2025"
+categories: [Software]
 execute:
   echo: true
   eval: false
@@ -14,94 +15,96 @@ execute:
 
 ## About
 
-The {surveydown} R package is a flexible, open-source platform for making surveys with [R](https://www.r-project.org), [Quarto](https://quarto.org), [Shiny](https://shiny.posit.co), and [Supabase](https://supabase.com).
+{surveydown} is a flexible, open-source survey tool using {{< var rlink >}}, {{< var quarto >}}, {{< var shiny >}}, and {{< var postgres >}}.
 
+<br>
+<center>
 <a href="https://surveydown.org" class="btn btn-primary" role="button"> Visit surveydown Official Website </a>
+</center>
+
+## Awards 🎉
+
+{surveydown} has been awarded the 2nd Prize in the [2024 Student Open Source Awards Program](https://ospo.gwu.edu/2024-student-open-source-award-winners) at GWU!
 
 ## Overview
 
 This project is led by [Prof John Helveston](https://www.jhelvy.com). For more details, see our [About](https://surveydown.org/about) page.
 
-![](/figs/surveydown.png){fig-align="center" width="550"}
+<br>
+
+![](/figs/surveydown.svg){fig-align="center" width="550"}
 
 The basic concept is:
 
-1.  Design your survey as a [Quarto](https://quarto.org/) document using
-    markdown and R code.
-2.  Convert your survey into a [Shiny](https://shiny.posit.co/) app that
-    can be hosted online and sent to respondents.
-3.  Store your survey responses in a [Supabase](https://supabase.com/)
-    database (or any Postgres database).
+1. Design your survey as a {{< var quarto >}} document using markdown and R code.
+2. Render your survey into a {{< var shiny >}} app that can be hosted online and sent to respondents.
+3. Store survey response data in a {{< var postgres >}} database. We recommend {{< var supabase >}} as a free, secure, and easy to use option.
 
 The {surveydown} R package provides functions to bring this all
 together.
 
-**See the [documentation](https://surveydown.org/documentation) to get started making
+**See [Documentation](https://surveydown.org/documentation) to get started making
 your own surveydown survey!**
 
-**See the [demo surveys](https://surveydown.org/demos) and use them as your survey templates!**
+**See [Demos](https://surveydown.org/demos) and use them as your survey templates!**
 
-## Background & Motivation
+## Motivation
 
-Most survey platforms (e.g., Google forms, Qualtrics, etc.) use
-drag-and-drop interfaces to design surveys, making version control and
-collaboration with others difficult. They’re also not reproducible
-(others cannot easily reproduce a survey made on these platforms), and
-many require a paid subscription or license to use.
+Most survey platforms (e.g., Google forms, Qualtrics, etc.) use graphic interfaces or spreadsheets to define survey content, making version control, collaboration, and reproducibility difficult or impossible. The surveydown package was designed to address these problems. As an open-source, markdown-based platform, all survey content is defined using **plain text** (markdown and R code) in two files:
 
-The surveydown package was designed to address these problems. As an
-open-source, markdown-based platform, all survey content is defined with
-plain text (markdown and R code) in a `survey.qmd` file and an `app.R`
-file that renders your survey into a Shiny app that can be hosted
-online. This makes your survey easy to reproduce, share, and version
-control with common tools like Git. The survey data collected is also
-owned by the survey designer in a separate Postgres database (we
-recommend Supabase as a free and open-source database provider).
+- `survey.qmd`: A {{< var quarto >}} document that contains the survey content (pages, questions, etc).
+- `app.R`: An R script defining a shiny app that contains global settings (libraries, database configuration, etc.) and server configuration options (e.g., conditional skipping / display, etc.).
 
-If you’re curious where this whole idea came from, check out this [blog
-post](https://www.jhelvy.com/blog/2023-04-06-markdown-surveys/), which
-outlines more on the general idea and the motivation for it. The post is
-now outdated in terms of the overall package design, but it provides
-something of an origin story and some of the motivation for developing
-this project.
+This approach makes your survey easy to reproduce, share, and version control with common tools like Git. And since all survey data is stored in a {{< var postgres >}} database, you have total control over where your survey data lives. We provide direct support for {{< var supabase >}} as a free, secure, and easy to use option.
+
+In case you're interested in the background behind the project, this [blog post](https://www.jhelvy.com/blog/2023-04-06-markdown-surveys/) provides something of an origin story. Note that the design discussed in the post is now quite outdated with what ultimately became surveydown.
 
 ## Installation
 
-### 1. Install [R](https://CRAN.R-project.org/) & [Quarto](https://quarto.org/)
+### 1. Install R & Quarto
 
-We also recommend working with an IDE that has good support for R,
-Quarto, and Shiny.
-[RStudio](https://www.rstudio.com/categories/rstudio-ide/) is great, and
-we also like [VSCode](https://code.visualstudio.com) and
-[Positron](https://github.com/posit-dev/positron).
+You need both: 
+
+- Install {{< var rlink >}}
+- Install {{< var quarto >}}
+
+We also recommend working with an IDE that has good support for R, Quarto, and Shiny.
+
+{{< var rstudio_ide >}} is great, and we also like {{< var vscode >}} and {{< var positron >}}.
 
 ### 2. Install the {surveydown} R package
 
-The {surveydown} R package is not yet on CRAN, but you can install the
-development version from GitHub with the following command in your R
-console:
+You can install {surveydown} from CRAN in your R console:
 
 ```{r}
-# install.packages("remotes")
-remotes::install_github("surveydown-dev/surveydown")
+#| eval: false
+
+install.packages("surveydown")
 ```
 
-### Version Control
-
-We made some functions to make it easier to keep your R package up to
-date.
-
-To *check* which version of the {surveydown} package you have installed,
-run:
+or you can install the development version from [GitHub](https://github.com/surveydown-dev/surveydown):
 
 ```{r}
+#| eval: false
+
+# install.packages("pak")
+pak::pak('surveydown-dev/surveydown')
+```
+
+Load the package with:
+
+```{r}
+#| eval: false
+
+library(surveydown)
+```
+
+You can also check which version you have installed:
+
+```{r}
+#| eval: false
+
 surveydown::sd_version()
-```
-
-To *update* to the latest version of the {surveydown} package, run:
-
-```{r}
-surveydown::sd_update()
 ```
 
 ## License Information
