--- a/projects/03_ai_for_bot_detection/index.qmd
+++ b/projects/03_ai_for_bot_detection/index.qmd
@@ -3,7 +3,7 @@ title: "(Expected) Using AI to Detect Bots in Surveys"
 subtitle: "Can we use GPT to validate if the survey is done by human or AI?"
 author: "Pingfan Hu"
 date: "Jul, 2025"
-categories: [LLM, Survey]
+categories: [LLM]
 bibliography: ../references.bib
 ---
 
