--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,7 @@
 title: "Pingfan Hu"
 image: figs/profile.jpeg
 toc: false
+back-to-top-navigation: false
 about:
   template: trestles
   image-width: 15em
