--- a/blogs/06_shortcut_to_pull_repos/index.qmd
+++ b/blogs/06_shortcut_to_pull_repos/index.qmd
@@ -29,6 +29,7 @@ The scripts will **NOT** pull:
 
 1. Any repos that are NOT on your machine, and
 2. Any branches that are NOT default, or NOT currently selected.
+3. Any repo that has unpushed changes.
 
 In short, the scripts will only pull the repos on your machine, and up to 2 brunches (default and current) for each repo. In usual cases, it will run relatively fast and will bounce in the dock when it's done.
 
