--- a/blogs/03_formr_instance_deployment/index.qmd
+++ b/blogs/03_formr_instance_deployment/index.qmd
@@ -2,6 +2,7 @@
 title: "formr Instance Deployment"
 date: "Dec 30, 2023"
 categories: [Tutorial]
+description: "A tutorial of deploying the formr instance using Ubuntu 22.04 on Akamai (prior name Linode)"
 ---
 
 ## Useful Links
