--- a/blogs/06_shortcut_to_pull_repos/index.qmd
+++ b/blogs/06_shortcut_to_pull_repos/index.qmd
@@ -5,6 +5,7 @@ categories: [Tutorial]
 number-sections: true
 echo: true
 eval: false
+description: "A MacOS tutorial of a shortcut to pull all local GitHub repositories"
 ---
 
 ```{r}
